Add responsive font size

--- a/index.css
+++ b/index.css
@@ -131,3 +131,9 @@ body {
 #contact-section .profile-link {
     margin: 1em;
 }
+
+@media only screen and (max-width: 600px) {
+    html {
+        font-size: 50%;
+    }
+  }
